--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM bitwalker/alpine-elixir-phoenix:1.9.0
 
-RUN apk --no-cache --update add alpine-sdk gmp-dev automake libtool inotify-tools autoconf python vim postgresql-client
+RUN apk --no-cache --update add alpine-sdk gmp-dev automake libtool inotify-tools autoconf python 
 
 EXPOSE 4000
 
